# Compilers-2021-II

./: CMakeLists.txt  README.md
src/: Analyzer.cpp  Analyzer.h  Tokens.cpp  Tokens.h  bucles.txt  conditionals.txt  lexic4l_4n4lyzer.cpp  main.cpp  moving_dependencies.sh  source.txt  start_parsing.sh  vars.txt
src/sintax_analysis/: compile.py  examples.py
src/sintax_analysis/tests/: test_data.py  test_parse.py
src/sintax_analysis/tests/parser/: anyTree.py  parse.py
src/sintax_analysis/utils/: grammar.txt  grammar_specs.txt  table_grammar.txt
